--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "target-postgres"
 version = "0.0.1"
 description = "`target-postgres` is a Singer target for postgres, built with the Meltano Singer SDK."
+readme = "README.md"
 authors = ["Dan Norman"]
 keywords = [
     "ELT",
@@ -10,21 +11,18 @@ keywords = [
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
-python = "<3.11,>=3.7.1"
-requests = "^2.25.1"
-singer-sdk = { version="^0.17.0"}
+python = "<3.12,>=3.7.1"
+singer-sdk = { version="^0.19.0"}
 fs-s3fs = { version = "^1.1.1", optional = true}
 psycopg2 = "^2.9.5"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
-tox = "^3.24.4"
-flake8 = "^3.9.2"
-black = "^21.9b0"
-pydocstyle = "^6.1.1"
-mypy = "^0.910"
-types-requests = "^2.26.1"
-isort = "^5.10.1"
+pytest = "^7.2.1"
+flake8 = "^5.0.4"
+black = "^23.1.0"
+pydocstyle = "^6.3.0"
+mypy = "^1.0.0"
+isort = "^5.11.5"
 
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
