--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,27 +12,34 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "<3.12,>=3.7.1"
-singer-sdk = { version="^0.24.0" }
+singer-sdk = { version="^0.27.0" }
 fs-s3fs = { version = "^1.1.1", optional = true }
 psycopg2 = "^2.9.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
-flake8 = "^5.0.4"
-darglint = "^1.8.1"
-black = "^23.1.0"
-pyupgrade = "^3.3.1"
-mypy = "^1.0.0"
-isort = "^5.11.5"
-singer-sdk = { version="^0.24.0", extras = ["testing"] }
+singer-sdk = { version="^0.27.0", extras = ["testing"] }
 
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3 # Vertical Hanging Indent
-src_paths = "target_postgres"
+[tool.ruff]
+ignore = [
+    "ANN101",  # missing-type-self
+    "ANN102",  # missing-type-cls
+]
+select = ["ALL"]
+src = ["target_postgres"]
+target-version = "py37"
+
+[tool.ruff.flake8-annotations]
+allow-star-arg-any = true
+
+[tool.ruff.isort]
+known-first-party = ["target_postgres"]
+
+[tool.ruff.pydocstyle]
+convention = "google"
 
 [build-system]
 requires = ["poetry-core>=1.0.8"]
