--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,15 @@ keywords = [
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.7.1"
-singer-sdk = { version="^0.27.0" }
+python = ">=3.7.1,<4"
+singer-sdk = { version="~=0.32.0" }
 fs-s3fs = { version = "^1.1.1", optional = true }
-psycopg2 = "^2.9.6"
+sqlalchemy = "<2"
+psycopg2 = "^2.9.8"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.2.1"
-singer-sdk = { version="^0.27.0", extras = ["testing"] }
+pytest = ">=7.4.0"
+singer-sdk = { version="~=0.32.0", extras = ["testing"] }
 
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
