--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ singer-sdk = { version="~=0.32.0" }
 fs-s3fs = { version = "^1.1.1", optional = true }
 sqlalchemy = "<3"
 psycopg2 = "^2.9.9"
+psycopg = {extras = ["binary"], version = "^3.1.12"}
 
 [tool.poetry.dev-dependencies]
 pytest = ">=7.4.0"
