--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,20 @@ keywords = [
     "ELT",
     "postgres",
 ]
+classifiers = [
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<4"
-singer-sdk = { version="~=0.32.0" }
+python = ">=3.8"
+singer-sdk = { version="~=0.34.1" }
 fs-s3fs = { version = "^1.1.1", optional = true }
 sqlalchemy = "<3"
 psycopg2 = "^2.9.9"
@@ -20,31 +29,35 @@ psycopg = {extras = ["binary"], version = "^3.1.12"}
 
 [tool.poetry.dev-dependencies]
 pytest = ">=7.4.0"
-singer-sdk = { version="~=0.32.0", extras = ["testing"] }
+singer-sdk = { version="~=0.34.1", extras = ["testing"] }
 
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
 
 [tool.ruff]
+src = ["target_postgres"]
+target-version = "py38"
+
+[tool.ruff.lint]
 ignore = [
     "ANN101",  # missing-type-self
     "ANN102",  # missing-type-cls
+    "COM812",  # missing-trailing-comma
+    "ISC001",  # single-line-implicit-string-concatenation
 ]
 select = ["ALL"]
-src = ["target_postgres"]
-target-version = "py37"
 
-[tool.ruff.flake8-annotations]
+[tool.ruff.lint.flake8-annotations]
 allow-star-arg-any = true
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["target_postgres"]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [build-system]
-requires = ["poetry-core>=1.0.8"]
+requires = ["poetry-core==1.8.1"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
