add tool.mypy section to toml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,11 @@ singer-sdk = { version="~=0.39.0", extras = ["testing"] }
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
 
+[tool.mypy]
+python_version = "3.12"
+warn_unused_configs = true
+plugins = "sqlmypy"
+
 [tool.ruff]
 src = ["target_postgres"]
 target-version = "py38"
