--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "target-postgres"
-version = "0.0.3"
+version = "0.0.4"
 description = "`target-postgres` is a Singer target for postgres, built with the Meltano Singer SDK."
 readme = "README.md"
 authors = ["Dan Norman"]
@@ -21,17 +21,22 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.8"
-singer-sdk = { version="~=0.36.1" }
+singer-sdk = { version="~=0.39.0" }
 fs-s3fs = { version = "^1.1.1", optional = true }
 psycopg2 = "^2.9.9"
-psycopg = {extras = ["binary"], version = "^3.1.18"}
+psycopg = {extras = ["binary"], version = "^3.2.1"}
 
 [tool.poetry.dev-dependencies]
-pytest = ">=7.4.0"
-singer-sdk = { version="~=0.36.1", extras = ["testing"] }
+pytest = ">=8"
+singer-sdk = { version="~=0.39.0", extras = ["testing"] }
 
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
+
+[tool.mypy]
+python_version = "3.12"
+warn_unused_configs = true
+plugins = "sqlmypy"
 
 [tool.ruff]
 src = ["target_postgres"]
