--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ singer-sdk = { version="~=0.39.0" }
 fs-s3fs = { version = "^1.1.1", optional = true }
 psycopg2 = "^2.9.9"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
+msgspec = "^0.18.6"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=8"
