update hatchling requirement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ dev = [
 ]
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling>=1,<2"]
 build-backend = "hatchling.build"
 
 [tool.mypy]
